Automatically backed up by Learn

--- a/css/bear.css
+++ b/css/bear.css
@@ -10,8 +10,11 @@ html {
 
 /* Write your solution here */
 
-@media screen (min-width:"1196px;") {
-  
+@media screen and (min-width: 900px) {
+  #bear {
+    position:absolute;
+    left:800px;
+  }
 }
 
  
